Makes gadget borders invisibles. Fixes WAVE-334. By Nikolay Volnov. https://reviews.apache.org/r/8327/
git-svn-id: https://svn.apache.org/repos/asf/incubator/wave/trunk@1423628 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/waveprotocol/wave/client/gadget/renderer/Gadget.css
+++ b/src/org/waveprotocol/wave/client/gadget/renderer/Gadget.css
@@ -41,12 +41,16 @@
   position: relative;
 }
 
+.gadgetIframe {
+  border: 0px solid transparent;
+}
+
 .loadingGadgetFrame {
   border: 1px solid #b8c6d9;
 }
 
 .loadedGadgetFrame {
-  border: 1px solid transparent;
+  border: 0px solid transparent;
 }
 
 @sprite .loadingGadgetLargeThrobber {
